--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Conviértete en miembro</a>
+              <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contactos</a>
+              <a class="nav__link" href="#footer">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -211,6 +211,113 @@
                 alt="Jill Tarter"
                 class="person__image person__image_size_m"
               />
+            </div>
+          </div>
+        </section>
+        <section class="membership" id="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="footer" id="footer">
+          <div class="footer__columns">
+            <div class="footer__column footer__logo-wrapper">
+              <img
+                src="./images/logo_white.svg"
+                alt="logo white"
+                class="footer__logo"
+              />
+            </div>
+            <div class="footer__column footer__column_content_hours">
+              <h2 class="footer__column-heading">Horario de apertura</h2>
+              <ul class="footer__list">
+                <li class="footer__list-item"
+                    >Lunes a viernes: 9 a.m. — 8 p.m.
+                  </a>
+                </li>
+                <li class="footer__list-item"
+                    >Sábados y domingos: 10 a.m. — 6 p.m.
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column footer__column_content_social">
+              <h2 class="footer__column-heading">Redes sociales</h2>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <img
+                  src="./images/facebook_white.svg"
+                  alt="Facebook"
+                  class="footer__social-icon"
+                  />
+                    <a class="footer__column-link" href="#"> Facebook </a>
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                  <img
+                  src="./images/instagram_white.svg"
+                  alt="Instagram"
+                  class="footer__social-icon"
+                  />
+                  <a class="footer__column-link" href="#"> Instagram </a>
+                </a>
+              </li>
+              </ul>
+            </div>
+            <div class="footer__copyright">
+              <p>© 2025 Marco Antonio Romero</p>
             </div>
           </div>
         </section>
