--- a/index.html
+++ b/index.html
@@ -285,11 +285,10 @@
               <ul class="footer__list">
                 <li class="footer__list-item"
                     >Lunes a viernes: 9 a.m. — 8 p.m.
-                  </a>
+                </li>
                 </li>
                 <li class="footer__list-item"
                     >Sábados y domingos: 10 a.m. — 6 p.m.
-                  </a>
                 </li>
               </ul>
             </div>
@@ -303,7 +302,6 @@
                   class="footer__social-icon"
                   />
                     <a class="footer__column-link" href="#"> Facebook </a>
-                  </a>
                 </li>
                 <li class="footer__list-item">
                   <img
@@ -312,7 +310,6 @@
                   class="footer__social-icon"
                   />
                   <a class="footer__column-link" href="#"> Instagram </a>
-                </a>
               </li>
               </ul>
             </div>
@@ -322,6 +319,6 @@
           </div>
         </section>
       </main>
-    </div>
+    </page>
   </body>
 </html>
