Etapa 3 - 3era revision

--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
             </li>
           </ul>
         </section>
-        <section class="footer" id="footer">
+
+        <footer class="footer" id="footer">
           <div class="footer__columns">
             <div class="footer__column footer__logo-wrapper">
               <img
@@ -283,12 +284,11 @@
             <div class="footer__column footer__column_content_hours">
               <h2 class="footer__column-heading">Horario de apertura</h2>
               <ul class="footer__list">
-                <li class="footer__list-item"
-                    >Lunes a viernes: 9 a.m. — 8 p.m.
+                <li class="footer__list-item"></li>
+                  Lunes a viernes: 9 a.m. — 8 p.m.
                 </li>
-                </li>
-                <li class="footer__list-item"
-                    >Sábados y domingos: 10 a.m. — 6 p.m.
+                <li class="footer__list-item">
+                  Sábados y domingos: 10 a.m. — 6 p.m.
                 </li>
               </ul>
             </div>
@@ -297,28 +297,28 @@
               <ul class="footer__list">
                 <li class="footer__list-item">
                   <img
-                  src="./images/facebook_white.svg"
-                  alt="Facebook"
-                  class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
                   />
-                    <a class="footer__column-link" href="#"> Facebook </a>
+                  <a class="footer__column-link" href="#"> Facebook </a>
                 </li>
                 <li class="footer__list-item">
                   <img
-                  src="./images/instagram_white.svg"
-                  alt="Instagram"
-                  class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
                   />
                   <a class="footer__column-link" href="#"> Instagram </a>
-              </li>
+                </li>
               </ul>
             </div>
             <div class="footer__copyright">
               <p>© 2025 Marco Antonio Romero</p>
             </div>
           </div>
-        </section>
+        </footer>
       </main>
-    </page>
+    </div>
   </body>
 </html>
