--- a/index.html
+++ b/index.html
@@ -297,20 +297,23 @@
             <h2 class="footer__column-heading">Redes sociales</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="Facebook"
-                  class="footer__social-icon"
-                />
-                <a class="footer__column-link" href="#"> Facebook </a>
+                <a class="footer__column-link" href="#">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />Facebook
+                </a>
               </li>
               <li class="footer__list-item">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="Instagram"
-                  class="footer__social-icon"
-                />
-                <a class="footer__column-link" href="#"> Instagram </a>
+                <a class="footer__column-link" href="#"
+                  ><img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
               </li>
             </ul>
           </div>
