--- a/index.html
+++ b/index.html
@@ -317,9 +317,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer__copyright">
-            <p>© 2025 Marco Antonio Romero</p>
-          </div>
+          <p class="footer__copyright">© 2025 Marco Antonio Romero</p>
         </div>
       </footer>
     </div>
