--- a/index.html
+++ b/index.html
@@ -274,50 +274,54 @@
       </main>
 
       <footer class="footer" id="footer">
-        <div class="footer__columns">
-          <div class="footer__column footer__logo-wrapper">
-            <img
-              src="./images/logo_white.svg"
-              alt="logo white"
-              class="footer__logo"
-            />
+        <div class="footer__cover">
+          <div class="footer__columns">
+            <div class="footer__column">
+              <img
+                src="./images/logo_white.svg"
+                alt="logo white de Triple"
+                class="footer__logo"
+              />
+            </div>
+            <div class="footer__column footer__column_content_hours">
+              <h2 class="footer__column-heading">Horario de apertura</h2>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  Lunes a viernes: 9 a.m. — 8 p.m.
+                </li>
+                <li class="footer__list-item">
+                  Sábados y domingos: 10 a.m. — 6 p.m.
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column footer__column_content_social">
+              <h2 class="footer__column-heading">Redes sociales</h2>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a class="footer__column-link" href="#">
+                    <img
+                      src="./images/facebook_white.svg"
+                      alt="Facebook"
+                      class="footer__social-icon"
+                    />Facebook
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                  <a class="footer__column-link" href="#"
+                    ><img
+                      src="./images/instagram_white.svg"
+                      alt="Instagram"
+                      class="footer__social-icon"
+                    />
+                    Instagram
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="footer__column footer__column_content_hours">
-            <h2 class="footer__column-heading">Horario de apertura</h2>
-            <ul class="footer__list">
-              <li class="footer__list-item">
-                Lunes a viernes: 9 a.m. — 8 p.m.
-              </li>
-              <li class="footer__list-item">
-                Sábados y domingos: 10 a.m. — 6 p.m.
-              </li>
-            </ul>
-          </div>
-          <div class="footer__column footer__column_content_social">
-            <h2 class="footer__column-heading">Redes sociales</h2>
-            <ul class="footer__list">
-              <li class="footer__list-item">
-                <a class="footer__column-link" href="#">
-                  <img
-                    src="./images/facebook_white.svg"
-                    alt="Facebook"
-                    class="footer__social-icon"
-                  />Facebook
-                </a>
-              </li>
-              <li class="footer__list-item">
-                <a class="footer__column-link" href="#"
-                  ><img
-                    src="./images/instagram_white.svg"
-                    alt="Instagram"
-                    class="footer__social-icon"
-                  />
-                  Instagram
-                </a>
-              </li>
-            </ul>
-          </div>
-          <p class="footer__copyright">© 2025 Marco Antonio Romero</p>
+          <p class="footer__copyright">
+            © 2025 Marco Antonio Romero en TripleTen
+          </p>
         </div>
       </footer>
     </div>
